2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Smash.x3dv:
	* QuadSphere.wrl:
	* SpiderMonkey.x3dv:
	* SpiderMonkey-Inline.x3dv: 

2014-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Anchor.wrl: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* CADLayer.wrl: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.wrl: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Dimmly.x3dv:
	* Normal.x3dv:
	* Tunnel.wrl: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* GeoViewpoint3.3.x3dv: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* 5.3.F4.wrl:
	* 5.3.F4.x3d:
	* 6.3.F3.wrl:
	* 6.3.F3.x3d:
	* 21.4.F1a.wrl:
	* 21.4.F1a.x3d: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Components.wrl: 

2014-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 
